[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprite/dead_COREv3.png" type="Texture" id=1]
[ext_resource path="res://sprite/broken_rover.png" type="Texture" id=2]
[ext_resource path="res://sprite/tesla.png" type="Texture" id=3]
[ext_resource path="res://sprite/wheel.png" type="Texture" id=4]
[ext_resource path="res://sprite/rock_1.png" type="Texture" id=5]
[ext_resource path="res://sprite/rock_2.png" type="Texture" id=6]
[ext_resource path="res://sprite/rock_3.png" type="Texture" id=7]
[ext_resource path="res://sprite/rock_4.png" type="Texture" id=8]
[ext_resource path="res://endgame.gd" type="Script" id=9]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 25.0229

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18, 7 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.3134, 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3, 5 )

[sub_resource type="CircleShape2D" id=8]
radius = 5.0

[node name="Node2D" type="Node2D"]
position = Vector2( 498, 330 )
script = ExtResource( 9 )

[node name="Core" type="RigidBody2D" parent="."]
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Core"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Core"]
shape = SubResource( 2 )

[node name="Core2" type="RigidBody2D" parent="."]
position = Vector2( -24, 163 )
rotation = 1.86809
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Core2"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Core2"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -77, -118, -84, -89, -73, -40, -98, -57, -116, -29, -103, 14, -79, 21, -95, 51, -91, 81, -57, 68, -63, 99, -52, 115, -8, 90, 21, 112, 51, 110, 69, 122, 81, 116, 76, 83, 109, 91, 102, 75, 113, 73, 110, 43, 65, -34, 48, -40, 25, -79, 9, -87, -1, -102 )

[node name="Core3" type="RigidBody2D" parent="."]
position = Vector2( 109, -135 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Core3"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Core3"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -77, -118, -84, -89, -73, -40, -98, -57, -116, -29, -103, 14, -79, 21, -95, 51, -91, 81, -57, 68, -63, 99, -52, 115, -8, 90, 21, 112, 51, 110, 69, 122, 81, 116, 76, 83, 109, 91, 102, 75, 113, 73, 110, 43, 65, -34, 48, -40, 25, -79, 9, -87, -1, -102 )

[node name="Core4" type="RigidBody2D" parent="."]
position = Vector2( -95, -93 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Core4"]
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Core4"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -69, 53, -73, 0, -66, -41, -39, -27, -13, -72, 3, -73, 8, -64, 9, -46, 22, -46, 25, -38, 67, -40, 77, -30, 47, 17, 52, 40, 29, 63, 16, 52, 2, 37, 5, 19, -40, 49 )

[node name="Core5" type="RigidBody2D" parent="."]
position = Vector2( -124, 24 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Core5"]
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Core5"]
position = Vector2( 0, -2 )
polygon = PoolVector2Array( -24, -49, -28, -20, -35, -7, -26, 8, -33, 22, -32, 27, -36, 28, -32, 35, -38, 36, -24, 50, 1, 42, 4, 46, 9, 39, 6, 35, 15, 30, 16, 34, 38, 14, 38, 4, 32, -3, 34, -20, 15, -24, 1, -39, -12, -43 )

[node name="Core6" type="RigidBody2D" parent="."]
position = Vector2( 106, 70 )
rotation = -3.13688
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Core6"]
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Core6"]
position = Vector2( 0, -2 )
polygon = PoolVector2Array( -24, -49, -28, -20, -35, -7, -26, 8, -33, 22, -32, 27, -36, 28, -32, 35, -38, 36, -24, 50, 1, 42, 4, 46, 9, 39, 6, 35, 15, 30, 16, 34, 38, 14, 38, 4, 32, -3, 34, -20, 15, -24, 1, -39, -12, -43 )

[node name="Tesla" type="RigidBody2D" parent="."]
position = Vector2( 38, 43 )
rotation = 2.8496
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tesla"]
modulate = Color( 0, 0.380392, 0.419608, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tesla"]
position = Vector2( -9, 1 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tesla"]
position = Vector2( 18, 3 )
shape = SubResource( 7 )

[node name="Rover1" type="RigidBody2D" parent="."]
position = Vector2( 171, 9 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Rover1"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rover1"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Rover1"]
position = Vector2( -1, -12 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Rover1"]
position = Vector2( -21, 12 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Rover1"]
position = Vector2( 24, 12 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Rover1"]
position = Vector2( 3, 13 )
shape = SubResource( 5 )

[node name="Rover2" type="RigidBody2D" parent="."]
position = Vector2( -45, -172 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
angular_velocity = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Rover2"]
modulate = Color( 0.839216, 0.266667, 1, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rover2"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Rover2"]
position = Vector2( -1, -12 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Rover2"]
position = Vector2( -21, 12 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Rover2"]
position = Vector2( 24, 12 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Rover2"]
position = Vector2( 3, 13 )
shape = SubResource( 5 )

[node name="Rover3" type="RigidBody2D" parent="."]
position = Vector2( -158, 115 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Rover3"]
modulate = Color( 0.419608, 1, 0.301961, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rover3"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Rover3"]
position = Vector2( -1, -12 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Rover3"]
position = Vector2( -21, 12 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Rover3"]
position = Vector2( 24, 12 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Rover3"]
position = Vector2( 3, 13 )
shape = SubResource( 5 )

[node name="Rover4" type="RigidBody2D" parent="."]
position = Vector2( -204, 32 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Rover4"]
modulate = Color( 0.788235, 0.423529, 0.458824, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rover4"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Rover4"]
position = Vector2( -1, -12 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Rover4"]
position = Vector2( -21, 12 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Rover4"]
position = Vector2( 24, 12 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Rover4"]
position = Vector2( 3, 13 )
shape = SubResource( 5 )

[node name="wheels" type="Node2D" parent="."]

[node name="wheel" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="wheel2" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel2"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel2"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="wheel3" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel3"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel3"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="wheel4" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel4"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel4"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="wheel5" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel5"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel5"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="wheel6" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel6"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel6"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="wheel7" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel7"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel7"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="wheel8" type="RigidBody2D" parent="wheels"]
position = Vector2( 89, 8 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wheels/wheel8"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheels/wheel8"]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
shape = SubResource( 8 )

[node name="debris" type="Node2D" parent="."]

[node name="Core6" type="RigidBody2D" parent="debris"]
position = Vector2( -61, 13 )
rotation = 2.65143
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="debris/Core6"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="debris/Core6"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -11, -11, -10, 2, -12, 6, -4, 13, 12, 7, 5, -10 )

[node name="Core7" type="RigidBody2D" parent="debris"]
position = Vector2( 30, -37 )
rotation = 1.42508
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="debris/Core7"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="debris/Core7"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -11, -11, -10, 2, -12, 6, -4, 13, 12, 7, 5, -10 )

[node name="Core8" type="RigidBody2D" parent="debris"]
position = Vector2( 56, 5 )
rotation = -1.66318
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="debris/Core8"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="debris/Core8"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -11, -11, -10, 2, -12, 6, -4, 13, 12, 7, 5, -10 )

[node name="Core9" type="RigidBody2D" parent="debris"]
position = Vector2( 102, -10 )
rotation = 1.51311
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="debris/Core9"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="debris/Core9"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -11, -11, -10, 2, -12, 6, -4, 13, 12, 7, 5, -10 )

[node name="Core10" type="RigidBody2D" parent="debris"]
position = Vector2( -12, -47 )
rotation = -1.57167
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="debris/Core10"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="debris/Core10"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -11, -11, -10, 2, -12, 6, -4, 13, 12, 7, 5, -10 )

[node name="Core11" type="RigidBody2D" parent="debris"]
position = Vector2( -23, 47 )
rotation = -2.29183
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="debris/Core11"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="debris/Core11"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -11, -11, -10, 2, -12, 6, -4, 13, 12, 7, 5, -10 )

[node name="Core12" type="RigidBody2D" parent="debris"]
position = Vector2( -40, -21 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="debris/Core12"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="debris/Core12"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -11, -11, -10, 2, -12, 6, -4, 13, 12, 7, 5, -10 )
